--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/directives/popup.js"></script>
         <!-- endbuild -->
 </body>
 </html>
