--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Fire Explorer</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="description" content="View a map of current fire incidents in New South Wales">
+    <meta name="viewport", content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1">
+    <meta name="apple-mobile-web-app-capable", content="yes">
+    <meta name="apple-touch-fullscreen", content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="fragment", content="!">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
