Begin work on calculating distance from incident.

--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,7 @@
     <script src="bower_components/Leaflet.MakiMarkers/Leaflet.MakiMarkers.js"></script>
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/angular-moment/angular-moment.js"></script>
+    <script src="bower_components/angularjs-geolocation/src/geolocation.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -65,6 +66,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/directives/popup.js"></script>
+        <script src="scripts/directives/distancefrom.js"></script>
         <!-- endbuild -->
 </body>
 </html>
