--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,8 @@
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/angular-moment/angular-moment.js"></script>
     <script src="bower_components/angularjs-geolocation/src/geolocation.js"></script>
+    <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+    <script src="bower_components/geolib/dist/geolib.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
