--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/directives/popup.js"></script>
         <script src="scripts/directives/distancefrom.js"></script>
+        <script src="scripts/services/fireapi.js"></script>
         <!-- endbuild -->
 </body>
 </html>
