--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,8 @@
     <script src="bower_components/angularjs-geolocation/src/geolocation.js"></script>
     <script src="bower_components/lodash/dist/lodash.compat.js"></script>
     <script src="bower_components/geolib/dist/geolib.js"></script>
+    <script src="bower_components/Rx/dist/rx.all.js"></script>
+    <script src="bower_components/angular-rx/rx.angular.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
