[WIP] Introduce Incident. Diverge from using GeoJSON. Map broken.

--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,7 @@
         <script src="scripts/directives/popup.js"></script>
         <script src="scripts/directives/distancefrom.js"></script>
         <script src="scripts/services/fireapi.js"></script>
+        <script src="scripts/services/incident.js"></script>
         <!-- endbuild -->
 </body>
 </html>
