--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,9 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div ng-include="'views/main.html'" ng-controller="MainCtrl"></div>
+    <div ng-controller="MainCtrl">
+      <div ng-view></div>
+    </div>
 
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
@@ -52,6 +54,7 @@
     <!-- bower:js -->
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/leaflet-dist/leaflet.js"></script>
     <script src="bower_components/angular-leaflet-directive/dist/angular-leaflet-directive.js"></script>
@@ -73,6 +76,8 @@
         <script src="scripts/directives/distancefrom.js"></script>
         <script src="scripts/services/fireapi.js"></script>
         <script src="scripts/services/incident.js"></script>
+        <script src="scripts/controllers/map.js"></script>
+        <script src="scripts/controllers/list.js"></script>
         <!-- endbuild -->
 </body>
 </html>
