--- a/app/index.html
+++ b/app/index.html
@@ -76,6 +76,7 @@
         <script src="scripts/directives/distancefrom.js"></script>
         <script src="scripts/services/fireapi.js"></script>
         <script src="scripts/services/incident.js"></script>
+        <script src="scripts/services/user_location.js"></script>
         <script src="scripts/controllers/map.js"></script>
         <script src="scripts/controllers/list.js"></script>
         <!-- endbuild -->
