--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,8 @@
         <script src="scripts/services/user_location.js"></script>
         <script src="scripts/controllers/map.js"></script>
         <script src="scripts/controllers/list.js"></script>
+        <script src="scripts/filters/simplifyalertlevel.js"></script>
+        <script src="scripts/filters/km.js"></script>
         <!-- endbuild -->
 </body>
 </html>
