--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,15 @@
 
     <!-- Add your site or application content here -->
     <div ng-controller="MainCtrl">
+      <header class="global">
+        <h1>Fire explorer</h1>
+
+        <nav>
+          <a href="/">List</a>
+          <a href="/map">Map</a>
+        </nav>
+      </header>
+
       <div ng-view></div>
     </div>
 
