--- a/app/index.html
+++ b/app/index.html
@@ -70,23 +70,24 @@
     <script src="bower_components/angularjs-geolocation/src/geolocation.js"></script>
     <script src="bower_components/lodash/dist/lodash.compat.js"></script>
     <script src="bower_components/geolib/dist/geolib.js"></script>
-    <script src="bower_components/Rx/dist/rx.all.js"></script>
+    <script src="bower_components/Rx/dist/rx.lite.js"></script>
+    <script src="bower_components/Rx/dist/rx.aggregates.js"></script>
     <script src="bower_components/angular-rx/rx.angular.js"></script>
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/detail.js"></script>
-        <script src="scripts/controllers/list.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/map.js"></script>
-        <script src="scripts/directives/incident_mini.js"></script>
-        <script src="scripts/directives/popup.js"></script>
-        <script src="scripts/services/fireapi.js"></script>
-        <script src="scripts/services/incident.js"></script>
-        <script src="scripts/services/user_location.js"></script>
-        <script src="scripts/filters/simplifyalertlevel.js"></script>
-        <script src="scripts/filters/km.js"></script>
-        <!-- endbuild -->
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/controllers/detail.js"></script>
+    <script src="scripts/controllers/list.js"></script>
+    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/map.js"></script>
+    <script src="scripts/directives/incident_mini.js"></script>
+    <script src="scripts/directives/popup.js"></script>
+    <script src="scripts/services/fireapi.js"></script>
+    <script src="scripts/services/incident.js"></script>
+    <script src="scripts/services/user_location.js"></script>
+    <script src="scripts/filters/simplifyalertlevel.js"></script>
+    <script src="scripts/filters/km.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
