--- a/app/index.html
+++ b/app/index.html
@@ -43,8 +43,8 @@
       <header class="global">
         <h1>Fire explorer</h1>
 
-        <a class="list-link" href="/" ng-if="$route.current.activetab == 'map'">List</a>
-        <a class="map-link" href="/map" ng-if="$route.current.activetab == 'list'">Map</a>
+        <a class="list-link" ng-href="#/" ng-if="$route.current.activetab == 'map'">List</a>
+        <a class="map-link" ng-href="#/map" ng-if="$route.current.activetab == 'list'">Map</a>
         <a class="back-link" href="javascript:history.back()" ng-if="$route.current.activetab == 'detail'">Back</a>
       </header>
 
